created ScannerUtil; used strip() and isBlank(); added validation for 0 quantity